# hmiralib

./: CMakeLists.txt  Doxyfile
include/: CMakeLists.txt
include/hmira/abstract/: mesh_traits.hpp
include/hmira/adapters/: ff_adapter.hpp  vv_adapter.hpp
include/hmira/algorithms/: compute_components.hpp  fill_holes.hpp  flip_normals.hpp  marching_cubes.hpp  marching_cubes_table.h  triangulate.hpp  voxelize.hpp
include/hmira/concepts/: edge_concept.h  face_concept.h  iterable_edges.h  iterable_faces.h  iterable_ff.h  iterable_fv.h  iterable_vertices.h  iterable_vv.h  vertex_concept.h
include/hmira/concepts/algorithms/: compute_components.hpp  fill_holes.hpp  flip_normals.hpp  marching_cubes.hpp  triangulate.hpp  voxelize.hpp
include/hmira/concepts/geometry/: point_in_polyhedron.hpp
include/hmira/geometry/: line_on_plane_projection.hpp  point_in_polyhedron.hpp  ray_face_intersection.hpp
include/hmira/grids/: Grid.hh  ImplicitSphere.hh  IsoExDefines.hh  RegularGrid.cc  RegularGrid.hh  ScalarGridT.cc  ScalarGridT.hh  ScalarGrid_traits.h  VectorFieldT.cc  VectorFieldT.hh  VolumeImageT.cc  VolumeImageT.hh  csg.hh
include/hmira/meshes/: OpenMeshX.hpp  OpenMeshX.tcc  winged_edge.hpp
include/hmira/preprocessor/: debug_mode.hpp
include/hmira/range/: edges.hpp  faces.hpp  range.hpp  vertices.hpp
input_meshes/: blender2.mtl
output_meshes/: oo.dump  oo.hdr
tests/: generate_sphere.cpp  parallel_triangulate.cpp  point_in_polyhedron.cpp  rasterize.cpp  rasterize_and_triangulate.cpp  triangulate.cpp
thesis/: thesis.ps
